--- a/style2.css
+++ b/style2.css
@@ -59,7 +59,7 @@ a.active,a:hover{
     display: none;
 
 }
-@media(max-width:500px){
+@media all and(max-width:500px){
     label.logo{
         font-size: 30px;
         padding-left: 50px;
@@ -69,7 +69,7 @@ a.active,a:hover{
         font-size:16px;
     }
 }
-@media(max-width:500px){
+@media all and(max-width:500px){
     .checkbtn{
     display: block;
     }
