--- a/style2.css
+++ b/style2.css
@@ -155,13 +155,13 @@ section{
     height: 90px;
     border-radius: 45%;
     position:absolute;
-    left: calc(15%);
+    left: calc(10%);
     top:-7px;
 
 }
 
 .content{
-    position: absolute;
+    position: fixed;
     margin: 20% 30%;
     text-align: center;
     font-size: 20px;
