--- a/style2.css
+++ b/style2.css
@@ -59,7 +59,7 @@ a.active,a:hover{
     display: none;
 
 }
-@media all and(max-width:981px){
+@media all and(max-width:600px){
     label.logo{
         font-size: 30px;
         padding-left: 50px;
@@ -161,7 +161,7 @@ section{
 }
 
 .content{
-    position: fixed;
+    position:absolute;
     margin: 20% 30%;
     text-align: center;
     font-size: 20px;
