--- a/style2.css
+++ b/style2.css
@@ -26,6 +26,8 @@ label.logo{
     line-height:80px;
     padding:0 100px;
     font-weight:bold;
+
+    
 }
 nav ul{float:right;
 margin-right: 20px;
@@ -55,11 +57,12 @@ a.active,a:hover{
     cursor: pointer;
     display:none;
 }
+
 #check{
     display: none;
-
 }
-@media (max-width:952px){
+
+@media(max-width:952px){
     label.logo{
         font-size: 30px;
         padding-left: 50px;
@@ -69,7 +72,7 @@ a.active,a:hover{
         font-size:16px;
     }
 }
-@media (max-width:858px){
+@media(max-width:858px){
     .checkbtn{
     display: block;
     }
@@ -122,7 +125,7 @@ section{
     border-radius: 50%;
     position:absolute;
     top:10px;
-    left: calc(50% - 50px);
+    left: calc(50% -50px);
 }
 
 .form{
@@ -155,13 +158,13 @@ section{
     height: 90px;
     border-radius: 45%;
     position:absolute;
-    left: calc(10%);
+    left: calc(0.1%);
     top:-7px;
 
 }
 
 .content{
-    position:absolute;
+    position: absolute;
     margin: 20% 30%;
     text-align: center;
     font-size: 20px;
@@ -175,9 +178,9 @@ footer{
     margin:0 auto;
     text-align:center;
     padding: 20px;
-    padding-bottom: 0px;
+    padding-bottom: 5px;
     border-top:1px solid #eee;
-    margin-top:510px;
+    margin-top:520px;
 
 }
 .link{
